# pretty_text

./: CMakeLists.txt  README.md  run.sh
src/: main.cpp
